apps/generic/overlays/mealie/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  template:
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
      containers:
        - name: container
          image: ghcr.io/mealie-recipes/mealie:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
            - name: yasr-volume
              mountPath: /app/data
              subPath: configs/mealie
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
