apps/generic/overlays/mealie/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
